Derive upload to Artifactory